--- a/zap/2023-10-26.session.properties
+++ b/zap/2023-10-26.session.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.2
-#Thu Oct 26 13:32:54 CEST 2023
-tx_timestamp=9092
+#Thu Nov 02 11:23:46 CET 2023
+tx_timestamp=16370
 modified=no
 version=2.7.2
